# creatorclass

./: .gitignore  Question.json  README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
data/: presentations.json
docs/: blueprint.md
docs/multimodal_ai_agent_for_educational_content_summarization/: README.md  pyproject.toml
docs/multimodal_ai_agent_for_educational_content_summarization/src/multimodal_ai_agent_for_educational_content_summarization/: crew.py  main.py
docs/multimodal_ai_agent_for_educational_content_summarization/src/multimodal_ai_agent_for_educational_content_summarization/config/: agents.yaml  tasks.yaml
pages/api/: presentation-metadata.ts  upload-presentation.ts
src/ai/: dev.ts
src/ai/flows/: createPresentationPdf.ts  generate-presentation-from-pdf.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/extract-pdf/: route.ts
src/app/api/generate-presentation/: route.ts
src/components/: Header.tsx  LoadingSpinner.tsx  PdfViewer.tsx  PresentationViewer.tsx  QuestionModal.tsx  TestGenerationDialog.tsx  TestQuestions.tsx
src/components/classroom/: ClassroomTab.tsx  FilterControls.tsx  PresentationCard.tsx  PresentationGrid.tsx  SubjectList.tsx  TabSwitcher.tsx  TopicList.tsx
src/components/content-creator/: ContentCreatorTab.tsx  GeneratePdfForm.tsx  UploadPresentationForm.tsx
src/components/icons/: CourseDeckLogo.tsx
src/components/ui/: select.tsx
src/lib/: data.ts  pdf-extractor.ts  presentations-store.ts  questions.ts  subjectHierarchy.ts
src/types/: index.ts  pdf-parse-fork.d.ts
(+3 files in other folders)
